--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,6 +40,15 @@ header h2 {
   font-size: 2em;
 }
 
+@media only screen and (max-width: 640px) {
+  header h2 {
+    width: 100%;
+    display: inline-flex;
+    justify-content: flex-start;
+    font-size: 1.7em;
+  }
+}
+
 nav {
   width: 100%;
   margin-right: 2em;
