--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,6 +40,19 @@ header h2 {
   font-size: 2em;
 }
 
+@media only screen and (max-width: 640px) {
+  header h2 {
+    width: 100%;
+    display: inline-flex;
+    justify-content: flex-start;
+    font-size: 1.7em;
+  }
+
+  h3 {
+    font-size: 1.5em;
+  }
+}
+
 nav {
   width: 100%;
   margin-right: 2em;
@@ -53,13 +66,6 @@ nav a {
   margin: 0 0.5em;
   color: black;
   font-size: 2em;
-}
-
-@media only screen and (max-width: 640px) {
-  nav a {
-    color: black;
-    font-size: 2em;
-  }
 }
 
 #about-me {
