--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,7 +157,7 @@ footer {
   font-size: 1em;
   font-weight: 300;
   text-align: center;
-  margin: 30px auto;
+  margin: 7rem auto;
 }
 
 footer a {
