--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,6 +121,7 @@ nav a {
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .skills-container i {
@@ -157,7 +158,7 @@ footer {
   font-size: 1em;
   font-weight: 300;
   text-align: center;
-  margin: 7rem auto;
+  margin: 7rem auto 1rem;
 }
 
 footer a {
