--- a/src/css/style.css
+++ b/src/css/style.css
@@ -93,8 +93,13 @@ nav a {
 
 @media only screen and (max-width: 640px) {
   #projects img {
-    width: 400px;
-    margin: 2% auto;
+    width: 100%;
+    margin: 5% auto;
+  }
+
+  #icon-ts {
+    width: 30px;
+    height: 30px;
   }
 }
 
