--- a/src/css/style.css
+++ b/src/css/style.css
@@ -96,16 +96,11 @@ nav a {
     width: 100%;
     margin: 5% auto;
   }
-
-  #icon-ts {
-    width: 30px;
-    height: 30px;
-  }
 }
 
 #projects p {
   font-weight: 200;
-  text-align: center;
+  text-align: left;
   font-style: italic;
 }
 
@@ -115,6 +110,10 @@ nav a {
   align-items: center;
   text-align: center;
 }
+
+/* .skill-set p {
+  text-align: left !important;
+} */
 
 .skill-set i {
   font-size: 1.5em;
